# aula_docker

./: README.md  app.py  pyproject.toml
